--- a/game.vcxproj.filters
+++ b/game.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="Source\Game\sunflower.cpp">
       <Filter>MyGame</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Game\bean.cpp">
+      <Filter>MyGame</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Library\audio.h">
