--- a/game.vcxproj
+++ b/game.vcxproj
@@ -245,6 +245,7 @@
     </ClCompile>
     <ClCompile Include="Source\Game\basic_zombie.cpp" />
     <ClCompile Include="Source\Game\bean.cpp" />
+    <ClCompile Include="Source\Game\map.cpp" />
     <ClCompile Include="Source\Game\mygame_initialize.cpp" />
     <ClCompile Include="Source\Game\mygame_over.cpp" />
     <ClCompile Include="Source\Game\mygame_run.cpp" />
