--- a/game.vcxproj.filters
+++ b/game.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="Source\Game\bean.cpp">
       <Filter>MyGame</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Game\map.cpp">
+      <Filter>MyGame</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Library\audio.h">
