--- a/game.vcxproj
+++ b/game.vcxproj
@@ -249,6 +249,7 @@
     <ClCompile Include="Source\Game\mygame_initialize.cpp" />
     <ClCompile Include="Source\Game\mygame_over.cpp" />
     <ClCompile Include="Source\Game\mygame_run.cpp" />
+    <ClCompile Include="Source\Game\Nut.cpp" />
     <ClCompile Include="Source\Game\plant.cpp" />
     <ClCompile Include="Source\Game\sunflower.cpp" />
     <ClCompile Include="Source\Game\zombie.cpp" />
