--- a/game.vcxproj
+++ b/game.vcxproj
@@ -252,8 +252,10 @@
     <ClCompile Include="Source\Game\mygame_run.cpp" />
     <ClCompile Include="Source\Game\Nut.cpp" />
     <ClCompile Include="Source\Game\plant.cpp" />
+    <ClCompile Include="Source\Game\PZGameObject.cpp" />
     <ClCompile Include="Source\Game\Sun.cpp" />
     <ClCompile Include="Source\Game\sunflower.cpp" />
+    <ClCompile Include="Source\Game\Vector2.cpp" />
     <ClCompile Include="Source\Game\zombie.cpp" />
     <ClCompile Include="Source\Library\audio.cpp" />
     <ClCompile Include="Source\Library\gamecore.cpp" />
@@ -270,7 +272,9 @@
     <ClInclude Include="Source\Core\StdAfx.h" />
     <ClInclude Include="Source\Game\Car.h" />
     <ClInclude Include="Source\Game\config.h" />
+    <ClInclude Include="Source\Game\PZGameObject.h" />
     <ClInclude Include="Source\Game\Sun.h" />
+    <ClInclude Include="Source\Game\Vector2.h" />
     <ClInclude Include="Source\Game\zombie.h" />
     <ClInclude Include="Source\Game\mygame.h" />
     <ClInclude Include="Source\Game\plant.h" />
