--- a/game.vcxproj.filters
+++ b/game.vcxproj.filters
@@ -83,6 +83,8 @@
     <ClCompile Include="Source\Game\double_bean.cpp" />
     <ClCompile Include="Source\Game\pb.cpp" />
     <ClCompile Include="Source\Game\SunManager.cpp" />
+    <ClCompile Include="Source\Game\PlantManager.cpp" />
+    <ClCompile Include="Source\Game\triangle_zombie.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Library\audio.h">
@@ -137,6 +139,8 @@
     <ClInclude Include="Source\Game\pb.h" />
     <ClInclude Include="Source\Game\SunManager.h" />
     <ClInclude Include="Source\Game\basic_zombie.h" />
+    <ClInclude Include="Source\Game\PlantManager.h" />
+    <ClInclude Include="Source\Game\triangle_zombie.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Source\Core\game.rc">
