icon_and_about_finsh

--- a/Source/Core/game.rc
+++ b/Source/Core/game.rc
@@ -165,9 +165,9 @@ CAPTION "About game"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
     ICON            IDR_MAINFRAME,IDC_STATIC,11,17,20,20
-    LTEXT           "Leistungsstarkes Game Framework by ntut-xuan",IDC_STATIC,39,10,300,8,SS_NOPREFIX
-	LTEXT           "It is a revised game framework, base on game framework made by woei-kae, Chen", IDC_STATIC, 39, 23, 300, 8
-    LTEXT           "Copyright (C) 2022-2023",IDC_STATIC,39,36,119,8
+    LTEXT           "The name of the game is Plants vs. Zombies",IDC_STATIC,39,10,300,8,SS_NOPREFIX
+	LTEXT           "Mainly place plants to resist zombie attacks.", IDC_STATIC, 39, 23, 300, 8
+    LTEXT           "Copyright (C) 2023-2024",IDC_STATIC,39,36,119,8
 END
 
 
