--- a/game.vcxproj
+++ b/game.vcxproj
@@ -297,6 +297,7 @@
     <ClInclude Include="Source\Game\zombie.h" />
     <ClInclude Include="Source\Game\mygame.h" />
     <ClInclude Include="Source\Game\plant.h" />
+    <ClInclude Include="Source\Game\ZombieManager.h" />
     <ClInclude Include="Source\Library\audio.h" />
     <ClInclude Include="Source\Library\gamecore.h" />
     <ClInclude Include="Source\Library\gameutil.h" />
