--- a/game.vcxproj
+++ b/game.vcxproj
@@ -247,6 +247,7 @@
     <ClCompile Include="Source\Game\bean.cpp" />
     <ClCompile Include="Source\Game\bucket_zombie.cpp" />
     <ClCompile Include="Source\Game\Car.cpp" />
+    <ClCompile Include="Source\Game\chili.cpp" />
     <ClCompile Include="Source\Game\Counter.cpp" />
     <ClCompile Include="Source\Game\double_bean.cpp" />
     <ClCompile Include="Source\Game\map.cpp" />
@@ -281,6 +282,7 @@
     <ClInclude Include="Source\Game\Bean.h" />
     <ClInclude Include="Source\Game\bucket_zombie.h" />
     <ClInclude Include="Source\Game\Car.h" />
+    <ClInclude Include="Source\Game\chili.h" />
     <ClInclude Include="Source\Game\config.h" />
     <ClInclude Include="Source\Game\Counter.h" />
     <ClInclude Include="Source\Game\double_bean.h" />
@@ -297,7 +299,6 @@
     <ClInclude Include="Source\Game\zombie.h" />
     <ClInclude Include="Source\Game\mygame.h" />
     <ClInclude Include="Source\Game\plant.h" />
-    <ClInclude Include="Source\Game\ZombieManager.h" />
     <ClInclude Include="Source\Library\audio.h" />
     <ClInclude Include="Source\Library\gamecore.h" />
     <ClInclude Include="Source\Library\gameutil.h" />
