--- a/game.vcxproj.filters
+++ b/game.vcxproj.filters
@@ -86,6 +86,7 @@
     <ClCompile Include="Source\Game\PlantManager.cpp" />
     <ClCompile Include="Source\Game\triangle_zombie.cpp" />
     <ClCompile Include="Source\Game\bucket_zombie.cpp" />
+    <ClCompile Include="Source\Game\chili.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Library\audio.h">
@@ -143,7 +144,7 @@
     <ClInclude Include="Source\Game\PlantManager.h" />
     <ClInclude Include="Source\Game\triangle_zombie.h" />
     <ClInclude Include="Source\Game\bucket_zombie.h" />
-    <ClInclude Include="Source\Game\ZombieManager.h" />
+    <ClInclude Include="Source\Game\chili.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Source\Core\game.rc">
