--- a/game.vcxproj
+++ b/game.vcxproj
@@ -251,6 +251,7 @@
     <ClCompile Include="Source\Game\Counter.cpp" />
     <ClCompile Include="Source\Game\double_bean.cpp" />
     <ClCompile Include="Source\Game\map.cpp" />
+    <ClCompile Include="Source\Game\music.cpp" />
     <ClCompile Include="Source\Game\mygame_initialize.cpp" />
     <ClCompile Include="Source\Game\mygame_over.cpp" />
     <ClCompile Include="Source\Game\mygame_run.cpp" />
@@ -289,6 +290,7 @@
     <ClInclude Include="Source\Game\Counter.h" />
     <ClInclude Include="Source\Game\double_bean.h" />
     <ClInclude Include="Source\Game\map.h" />
+    <ClInclude Include="Source\Game\music.h" />
     <ClInclude Include="Source\Game\Nut.h" />
     <ClInclude Include="Source\Game\pb.h" />
     <ClInclude Include="Source\Game\PbManager.h" />
