card manager sun flower work

--- a/game.vcxproj
+++ b/game.vcxproj
@@ -247,6 +247,7 @@
     <ClCompile Include="Source\Game\bean.cpp" />
     <ClCompile Include="Source\Game\bucket_zombie.cpp" />
     <ClCompile Include="Source\Game\Car.cpp" />
+    <ClCompile Include="Source\Game\CardManager.cpp" />
     <ClCompile Include="Source\Game\chili.cpp" />
     <ClCompile Include="Source\Game\Counter.cpp" />
     <ClCompile Include="Source\Game\double_bean.cpp" />
@@ -284,6 +285,7 @@
     <ClInclude Include="Source\Game\Bean.h" />
     <ClInclude Include="Source\Game\bucket_zombie.h" />
     <ClInclude Include="Source\Game\Car.h" />
+    <ClInclude Include="Source\Game\CardManager.h" />
     <ClInclude Include="Source\Game\chili.h" />
     <ClInclude Include="Source\Game\config.h" />
     <ClInclude Include="Source\Game\Counter.h" />
